<resources>
    <string name="app_name">My Feeder Config</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="feeder_list_fragment_label">Feeder list</string>
    <string name="feeder_config_fragment_label">Feeder setup</string>
    <string name="label_name">Name:</string>
    <string name="label_ssid">SSID:</string>
    <string name="label_password">Password:</string>
    <string name="button_send">Send</string>
    <string name="label_wifi_status">WiFi Status:</string>
</resources>